# skillr

./: .env.docker  .env.example  .gitignore  AGENTIS_STUDIO_PROJECT_PLAN.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FEATURE_IDEAS.md  LICENSE  Makefile  NOTES.md  PLAN.md  README.md  SECURITY.md  STATUS.md  composer.json  docker-compose.yml
.github/workflows/: ci.yml  docs.yml  npm-publish.yml
app/Events/: ProjectSynced.php  SkillUpdated.php
app/Jobs/: DispatchWebhookJob.php  ProjectScanJob.php
app/Models/: Agent.php  AppSetting.php  DesktopAppConfig.php  LibrarySkill.php  MarketplacePayout.php  MarketplaceSkill.php  OpenClawConfig.php  Organization.php  Plan.php  Project.php  ProjectA2aAgent.php  ProjectAgent.php  ProjectMcpServer.php  ProjectProvider.php  ProjectRepository.php  Skill.php  SkillVariable.php  SkillVersion.php  Tag.php  UsageRecord.php  User.php  Webhook.php  WebhookDelivery.php  WorkspaceProfile.php
app/Policies/: ProjectA2aAgentPolicy.php  ProjectMcpServerPolicy.php  ProjectPolicy.php  SkillPolicy.php  WebhookPolicy.php
article/: skillr-medium-article.md  skills_structure.md
bootstrap/: app.php
cli/: .npmignore  README.md  package-lock.json  package.json  tsconfig.json
config/: cashier.php  cors.php  filesystems.php  services.php
docs/: NESTJS_MIGRATION_PLAN.md  index.md  package-lock.json  package.json
routes/: api.php  auth.php
ui/: index.html  package-lock.json  package.json  vite.config.ts
ui/src-tauri/: Cargo.toml  tauri.conf.json
ui/src-tauri/capabilities/: default.json
ui/src-tauri/src/: lib.rs  main.rs
(+301 files in other folders)
