[package]
name = "skillr"
version = "0.1.0"
description = "Skillr — Universal AI Skill & Prompt Manager"
authors = ["Skillr Contributors"]
edition = "2021"

[lib]
name = "skillr_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
